--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <link
-      href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
-    <title>miragejs-rehearsal</title>
+    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet" />
+    <title>First Live Streaming Fabio Vedovelli</title>
   </head>
   <body class="bg-gray-500">
     <noscript>
       <strong
-        >We're sorry but miragejs-rehearsal doesn't work properly without
-        JavaScript enabled. Please enable it to continue.</strong
+        >We're sorry but miragejs-rehearsal doesn't work properly without JavaScript enabled. Please
+        enable it to continue.</strong
       >
     </noscript>
     <div id="app"></div>
